AdminController Endpoint userDelete

--- a/quora-db/pom.xml
+++ b/quora-db/pom.xml
@@ -26,6 +26,10 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
+            <resource>
+                <directory>src/main/resources/sql</directory>
+                <filtering>true</filtering>
+            </resource>
         </resources>
 
         <plugins>
